data access layer passing